fixed pax format

--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
         const declineTitle = isDeclined ? 'Undo Don\'t Want' : 'Don\'t Want';
 
         tr.innerHTML = `
-          <td>${order.box} <span class="muted" style="font-size:12px;">(PAX x${order.pax})</span></td>
+          <td>${order.box} <span class="muted" style="font-size:12px;">(${order.pax})</span></td>
           <td>${order.food}</td>
           <td>
             <div class="time-cell">
